# ollamacode

./: .gitignore  README.md  pyproject.toml
examples/: simple_calculator.py
src/ollamacode/: __init__.py  autocomplete.py  cache.py  cli.py  config.py  context.py  diff_utils.py  error_handler.py  feedback.py  interactive_session.py  ollama_client.py  permissions.py  syntax_highlighter.py  tool_executor.py  tool_schemas.py  unified_session.py
src/ollamacode/execution/: __init__.py  error_recovery.py  intent_analyzer.py  result_formatter.py  tool_executor.py
src/ollamacode/tools/: __init__.py  bash_ops.py  file_ops.py  git_ops.py  search_ops.py
tests/: __init__.py  test_autocomplete.py  test_autocomplete_integration.py  test_cache.py  test_cache_integration.py  test_chaining.py  test_cli_advanced.py  test_e2e_real.py  test_error_handling.py  test_file_creation.py  test_file_ops.py  test_integration.py  test_interactive_session.py  test_ollama_client.py  test_phase2.py  test_phase3.py  test_session.py  test_simple_e2e.py  test_spinner.py  test_streaming.py  test_syntax_highlighter.py  test_syntax_integration.py  test_tool_calling.py  test_unified_execution.py  test_unified_integration.py
tests/.ollamacode/conversations/: session_1753861079.json  session_1753907174.json
